Added complete Symptom Checker feature with premium medical UI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,11 @@
           <h3>Chatbot</h3>
           <p>Ask medical questions & get expert answers</p>
         </a>
-
+        <a class="home-card-large" onclick="goTo('symptom_checker.html')">
+          <div class="emoji-icon">🩺</div>
+          <h3>Symptom Checker</h3>
+          <p>Check diseases based on symptoms</p>
+        </a>
         <!-- Diseases -->
         <a class="home-card-large" onclick="goTo('disease.html')">
           <div class="emoji-icon">🦠</div>
